--- a/src/components/Molecules/Swiper/Swiper.module.scss
+++ b/src/components/Molecules/Swiper/Swiper.module.scss
@@ -11,10 +11,18 @@
         width: 100%;
         height: 100%;
         position: relative;
+        min-height: 33rem;
         border-radius: 3.6rem;
         border: 0.2rem solid #fff;
         overflow: hidden;
-
+        video {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+        }
         img {
             object-fit: cover!important;
         }
@@ -24,8 +32,8 @@
         flex-direction: column;
         justify-content: center;
         h3, p {
-            font-size: 1.5rem;
-            line-height: 2rem;
+            font-size: 1.8rem;
+            line-height: 2.2rem;
             color: #fff;
             text-align: justify;
             font-weight: 700;
@@ -47,6 +55,7 @@
         padding: 0;
         figure {
             height: 25rem;
+            min-height: auto;
         }
         .text {
             h3 {
