--- a/src/components/Organisms/Header/Header.module.scss
+++ b/src/components/Organisms/Header/Header.module.scss
@@ -91,7 +91,8 @@
         position: fixed;
         top: -100%;
         left: 0;
-        min-height: 100vh;
+        min-height: 100%;
+        height: 100%;
         background: #000020;
         transition: all 0.3s ease-in-out;
         &.active {
