--- a/src/components/Molecules/Swiper/Swiper.module.scss
+++ b/src/components/Molecules/Swiper/Swiper.module.scss
@@ -1,30 +1,43 @@
 .slide {
     display: grid;
     width: 80%;
-    grid-template-columns: 35% 1fr;
+    grid-template-columns: 45% 1fr;
     gap: 5rem;
-    padding: 0 8rem;
+    padding: 0 2.6rem;
     margin: 0 auto;
     margin-top: 15rem;
+    
 
     figure {
         width: 100%;
         height: 100%;
         position: relative;
         min-height: 33rem;
-        border-radius: 3.6rem;
-        border: 0.2rem solid #fff;
+        border-radius: 4.2rem;
+        padding: 1.6rem;
+        border: 0.3rem solid #fff;
         overflow: hidden;
+        
         video {
+            border: 0.1rem solid #fff;
             position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
+            width: 98%;
+            height: 95%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            border-radius: 3rem;
             object-fit: cover;
         }
         img {
+            border: 0.1rem solid #fff !important;
             object-fit: cover!important;
+            top: 50%!important;
+            left: 50%!important;
+            border-radius: 3.6rem;
+            width: 98%!important;
+            height: 95%!important;
+            transform: translate(-50%,-50%)!important;
         }
     }
     .text {
@@ -39,6 +52,7 @@
             font-weight: 700;
             padding: 0;
             margin: 0;
+            max-width: 100%;
         }
         h3 {
             font-weight: 900;
