--- a/src/components/Organisms/Footer/footer.module.scss
+++ b/src/components/Organisms/Footer/footer.module.scss
@@ -45,8 +45,31 @@
                             line-height: 3.4rem;
                             font-weight: 7000;
                             margin: 0;
+                            position: relative;
+                            &::after {
+                                content: '';
+                                width: 0;
+                                height: 0.2rem;
+                                background-color: #fff;
+                                position: absolute;
+                                bottom: 0rem;
+                                left: 0;
+                                transition: all 0.3s ease-in-out ;
+                            }
+                            &:hover {
+                                &::after {
+                                    width: 100%;
+                                }
+                            }
+                        }
+                        &:hover {
+                              p,a {
+                                &::after {
+                                    width: 100%;
+                                }
                         }
                     }
+                }
                 }
                 .icon {
                     width: 6.2rem;
