update-fix-blur

--- a/src/app/services/page.module.scss
+++ b/src/app/services/page.module.scss
@@ -167,7 +167,7 @@
                         opacity: 1!important;
                     }
                     img {
-                        filter: blur(0.9rem) brightness(50%);
+                        filter: blur(0.9rem) brightness(50%)!important;
                     }
                 }
             }
