--- a/src/components/Organisms/Header/Header.module.scss
+++ b/src/components/Organisms/Header/Header.module.scss
@@ -6,6 +6,7 @@
     height: 5rem;
     opacity: 0;
     pointer-events: none;
+    z-index: 99999;
     .icon {
         width: 100%;
         color: #fff;
@@ -95,6 +96,7 @@
         height: 100%;
         background: #000020;
         transition: all 0.3s ease-in-out;
+        z-index: 9999;
         &.active {
             top: 0;
         }
