--- a/src/components/Organisms/Header/Header.module.scss
+++ b/src/components/Organisms/Header/Header.module.scss
@@ -69,6 +69,7 @@
                     display: inline-block;
                     height: 100%;
                     color: #fff;
+                    font-size: 2.4rem;
                     &::after {
                         content: '';
                         position: absolute;
