--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -55,10 +55,12 @@
         figure {
           position: relative;
           width: 100%;
-          height: 8rem;
+          height: 10rem;
           margin-bottom: 2rem;
           img {
             object-fit: contain!important;
+            margin: 0 auto;
+            max-width: 20rem;
           }
         }
         p {
