update-last-fix

--- a/src/components/Molecules/AboutSwiper/aboutswiper.module.scss
+++ b/src/components/Molecules/AboutSwiper/aboutswiper.module.scss
@@ -47,6 +47,7 @@
             font-weight: 900;
             margin: 2.5rem 0 ;
             text-align: center;
+            text-shadow: 0 0 5rem #bb070a, 0 0 0.1rem #bb070a;
         }
 
     }
