--- a/src/components/Molecules/Swiper/Swiper.module.scss
+++ b/src/components/Molecules/Swiper/Swiper.module.scss
@@ -57,6 +57,7 @@
         h3 {
             font-weight: 900;
             margin: 5rem 0;
+                text-shadow: 0 0 1rem #9da416, 0 0 0.2rem #9da416;
         }
 
     }
