--- a/src/app/about-us/page.module.scss
+++ b/src/app/about-us/page.module.scss
@@ -23,8 +23,8 @@
         font-family: var(--font-montserrat);
         color: #d64b4e;
         text-shadow:
-            0 0 5px #bb070a,
-            0 0 40px #bb070a;
+            0 0 5px #bb070a7c,
+            0 0 40px #bb070a81;
         padding: 0 10rem;
         padding-top: 6rem;
     }
