update-section-styles

--- a/src/components/Molecules/AboutSection/styles.module.scss
+++ b/src/components/Molecules/AboutSection/styles.module.scss
@@ -8,6 +8,8 @@
     --swiper-pagination-bullet-inactive-color: #b8b8b8;
     --swiper-pagination-bottom: -5rem;
     text-align: justify;
+    position: relative;
+    
 
     h2,
     h3 {
