--- a/src/components/Organisms/Footer/footer.module.scss
+++ b/src/components/Organisms/Footer/footer.module.scss
@@ -5,6 +5,7 @@
     padding: 8rem 0;
     display: flex;
     flex-direction: column;
+    position: relative;
     h5 {
         font-size: 5rem;
         font-weight: 900;
