--- a/src/components/Molecules/HomeSection/styles.module.scss
+++ b/src/components/Molecules/HomeSection/styles.module.scss
@@ -27,6 +27,7 @@
   display: flex;
   flex-direction: column;
   height: auto;
+  position: relative;
   /* gap: 32px; */
   /* grid-row-start: 2; */
   .services {
