update-page-styles

--- a/src/app/about-us/page.module.scss
+++ b/src/app/about-us/page.module.scss
@@ -8,7 +8,7 @@
     --swiper-pagination-bullet-inactive-color: #b8b8b8;
     --swiper-pagination-bottom: -5rem;
     text-align: justify;
-
+    position: relative;
     h2,
     h3 {
         width: auto;
