--- a/src/app/services/page.module.scss
+++ b/src/app/services/page.module.scss
@@ -10,6 +10,7 @@
     --swiper-navigation-sides-offset: 40%;
     --swiper-navigation-size: 3.6rem;    
     --swiper-navigation-color: #fff;
+    position: relative;
     h2,
     h3 {
         width: auto;
