--- a/src/components/Molecules/AboutSection/styles.module.scss
+++ b/src/components/Molecules/AboutSection/styles.module.scss
@@ -82,6 +82,7 @@
         margin: 0 auto;
         margin-bottom: 4rem;
         max-width: 140rem;
+        position: relative;
         h3 {
             margin-bottom: 10rem;
             @media screen and (max-width:1023px) {
