--- a/src/components/Organisms/Footer/footer.module.scss
+++ b/src/components/Organisms/Footer/footer.module.scss
@@ -23,14 +23,18 @@
         max-width: 155rem;
         margin: 0 auto;
         width: 100%;
+        position: relative;
 
         .info {
             display: grid;
             grid-template-columns: repeat(2,1fr);
             gap: 20rem;
+            position: relative;
 
             .socials {
+                position: relative;
                 ul {
+                    position: relative;
                     width: 100%;
                     height: 100%;
                     display: flex;
@@ -38,6 +42,7 @@
                     justify-content: space-around;
                     padding: 2rem 0;
                     li {
+                        position: relative;
                         display: flex;
                         align-items: center;
                         p, a {
