update-styles-fix

--- a/src/components/Atoms/Banner/Banner.module.scss
+++ b/src/components/Atoms/Banner/Banner.module.scss
@@ -1,5 +1,5 @@
 .banner_container {
-    width: 100vw;
+    width: 100%;
     height: auto;
     position: relative;
     padding: 30rem 15rem 4rem;
