--- a/src/app/about-us/page.module.scss
+++ b/src/app/about-us/page.module.scss
@@ -3,7 +3,8 @@
     height: auto;
     width: 100%;
     max-width: 155rem;
-    margin: 30rem auto 0;
+    margin: 0 auto 0;
+    padding-top: 30rem;
     --swiper-pagination-color: #fff;
     --swiper-pagination-bullet-inactive-color: #b8b8b8;
     --swiper-pagination-bottom: -5rem;
