--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -12,8 +12,8 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  max-width: 100%;
+  // overflow-x: hidden;
   height: 100%;
   position: relative;
 }
