--- a/src/components/Molecules/ServicesSection/styles.module.scss
+++ b/src/components/Molecules/ServicesSection/styles.module.scss
@@ -2,7 +2,8 @@
     height: auto;
     width: 100%;
     max-width: 155rem;
-    margin: 30rem auto 0;
+    margin: 0 auto 0;
+    padding-top: 30rem;
     --swiper-pagination-color: #fff;
     --swiper-pagination-bullet-inactive-color: #bebabafd;
     --swiper-pagination-bottom: -5rem;
