--- a/src/components/Organisms/Footer/footer.module.scss
+++ b/src/components/Organisms/Footer/footer.module.scss
@@ -1,6 +1,7 @@
 .footer {
     width: 100%;
     height: auto;
+    min-height:50vh;
     background: #bb070a;
     padding: 8rem 0;
     display: flex;
