--- a/src/app/services/page.module.scss
+++ b/src/app/services/page.module.scss
@@ -1,16 +1,5 @@
 .page {
     height: auto;
-    width: 100%;
-    max-width: 155rem;
-    margin: 0 auto 0;
-    padding-top: 30rem;
-    --swiper-pagination-color: #fff;
-    --swiper-pagination-bullet-inactive-color: #bebabafd;
-    --swiper-pagination-bottom: -5rem;
-    --swiper-navigation-top-offset: 110%;
-    --swiper-navigation-sides-offset: 40%;
-    --swiper-navigation-size: 3.6rem;    
-    --swiper-navigation-color: #fff;
     position: relative;
     h2,
     h3 {
@@ -56,6 +45,7 @@
         width: 100%;
         height: auto;
         margin-top: 12rem;
+        // overflow: hidden;
 
         button {
             width: 100%;
