--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -9,7 +9,7 @@
   /* padding: 80px; */
   /* gap: 64px; */
   font-family: var(--font-montserrat);
-  
+  position: relative;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -214,9 +214,7 @@ a.secondary {
 }
 
 @media (max-width: 600px) {
-  .page {
-    padding: 0 1rem;
-  }
+  
 
   .main {
     align-items: center;
