update-sryles-finals

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -195,7 +195,7 @@ body {
   // --swiper-pagination-color: #fff;
 }
 .swiper {
-  padding: 10rem 0!important;
+  padding: 5rem 0 8rem!important;
   // overflow: visible!important;
   // overflow-x: hidden!important;
 }
