--- a/src/components/Organisms/Footer/footer.module.scss
+++ b/src/components/Organisms/Footer/footer.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    margin-top: 3rem;
     h5 {
         font-size: 5rem;
         font-weight: 900;
