update-librerías-textos

--- a/src/components/Molecules/HomeSection/styles.module.scss
+++ b/src/components/Molecules/HomeSection/styles.module.scss
@@ -71,15 +71,18 @@
           width: 100%;
           line-height: 1.8rem;
           text-align: justify;
+          margin-top: 0;
         }
       }
     }
     p {
-      width: 60%;
+      width: 45%;
       font-size: 2rem;
       line-height: 2.6rem;
+      text-align: justify;
       opacity: 0.9;
       color: #FFF;
+      margin-top: 2rem;
     }
     h2 {
       margin-top: 8rem;
